--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 # For more information: https://laravel.com/docs/sail
+
 version: '3'
+
 services:
     laravel.test:
         build:
@@ -9,26 +11,31 @@ services:
                 WWWGROUP: '${WWWGROUP}'
         image: sail-8.0/app
         ports:
-            - '${APP_PORT:-8081}:80'
+            - '${APP_PORT}:80'
         environment:
             WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
+            APP_PORT: '${APP_PORT}'
         volumes:
             - '.:/var/www/html'
         networks:
             - sail
         depends_on:
-            - mysql
+            mysql:
+                condition: service_healthy
+        restart:
+            always  
+
     mysql:
         image: 'mysql:8.0'
         ports:
-            - '${FORWARD_DB_PORT:-3307}:3306'
+            - '${DB_PORT}:3306'
         environment:
             MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
             MYSQL_DATABASE: '${DB_DATABASE}'
-            MYSQL_USER: '${DB_USERNAME}'
-            MYSQL_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+            #MYSQL_USER: '${DB_USERNAME}'       // optional
+            #MYSQL_PASSWORD: '${DB_PASSWORD}'   // optional
+            #MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'  // optional
         volumes:
             - 'sailmysql:/var/lib/mysql'
         networks:
@@ -37,9 +44,32 @@ services:
           test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
           retries: 3
           timeout: 5s
+        restart:
+            always
+
+    phpmyadmin:
+        image: 
+            phpmyadmin/phpmyadmin:5.1.1
+        ports:
+            - "8080:80"
+        depends_on:
+            mysql:
+                condition: service_healthy
+        environment:
+            PMA_HOST: mysql
+            PMA_PORT: '${DB_PORT}'
+            PMA_USER: '${DB_USERNAME}'
+            PMA_PASSWORD: '${DB_PASSWORD}'
+            PMA_ARBITRARY: "1"
+        networks:
+            - sail
+        restart:
+            always
+          
 networks:
     sail:
         driver: bridge
+
 volumes:
     sailmysql:
         driver: local
