--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,12 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:rYMcszcOK2cqwChdykw3pblfkQg3UfGDPVwap3ctPIU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:7999
 APP_SERVICE=laravel.test
 APP_PORT=7999
 
 # Cookies
-SESSION_DOMAIN=localhost:7999
+SESSION_DOMAIN=http://localhost:7999
 
 # Logs
 LOG_CHANNEL=stack
