--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,8 +63,23 @@ services:
             PMA_ARBITRARY: "1"
         networks:
             - sail
+        depends_on:
+            mysql:
+                condition: service_healthy
         restart:
             always
+
+    mailhog:
+        image: 
+            'mailhog/mailhog:latest'
+        ports:
+            - '${FORWARD_MAILHOG_PORT:-1025}:1025'
+            - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
+        networks:
+            - sail
+        depends_on:
+            mysql:
+                condition: service_healthy
 
 networks:
     sail:
